WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301802
REGRESSION(
302424@main
): Broke the internal iOS build
https://bugs.webkit.org/show_bug.cgi?id=301802
Summary
REGRESSION(302424@main): Broke the internal iOS build
Abrar Rahman Protyasha
Reported
2025-11-01 03:48:40 PDT
``` In file included from /Source/WebKit/WebProcess/GPU/graphics/Model/ModelDowncastConvertToBackingContext.cpp:31: /Source/WebKit/WebProcess/GPU/graphics/Model/RemoteDDMeshProxy.h:104:11: error: private field 'm_cameraDistance' is not used [-Werror,-Wunused-private-field] 104 | float m_cameraDistance { 1.f }; /Source/WebKit/WebProcess/GPU/graphics/Model/RemoteDDMeshProxy.h:105:33: error: private field 'm_stageMode' is not used [-Werror,-Wunused-private-field] 105 | WebCore::StageModeOperation m_stageMode; 2 errors generated. ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-01 03:48:45 PDT
<
rdar://problem/163849141
>
Abrar Rahman Protyasha
Comment 2
2025-11-01 03:57:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53295
EWS
Comment 3
2025-11-01 05:31:49 PDT
Committed
302432@main
(d078cc2ab2dd): <
https://commits.webkit.org/302432@main
> Reviewed commits have been landed. Closing PR #53295 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug