REGRESSION(302424@main): Broke the internal iOS build https://bugs.webkit.org/show_bug.cgi?id=301802 rdar://163849141

Unreviewed build fix.

We guard the RemoteDDMeshProxy class members introduced in 302424@main
behind ENABLE_GPU_PROCESS_MODEL to address these unused variable errors:

```
In file included from /Source/WebKit/WebProcess/GPU/graphics/Model/ModelDowncastConvertToBackingContext.cpp:31:
/Source/WebKit/WebProcess/GPU/graphics/Model/RemoteDDMeshProxy.h:104:11: error: private field 'm_cameraDistance' is not used [-Werror,-Wunused-private-field]
  104 |     float m_cameraDistance { 1.f };
/Source/WebKit/WebProcess/GPU/graphics/Model/RemoteDDMeshProxy.h:105:33: error: private field 'm_stageMode' is not used [-Werror,-Wunused-private-field]
  105 |     WebCore::StageModeOperation m_stageMode;
2 errors generated.
```

* Source/WebKit/WebProcess/GPU/graphics/Model/RemoteDDMeshProxy.h:

Canonical link: https://commits.webkit.org/302432@main